--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 Werkzeug==3.0.1
-SQLAlchemy==2.0.23
+SQLAlchemy>=2.0.35
 python-dotenv==1.0.0
